master

0.7.16

* Better builder validation
* Adapters::Sequel: check for correct exceptions

0.7.15

* CONTRIBUTORS file added
* Adapters::File#increment fixed

0.7.14

* Adapters::ActiveRecord, Adapters::Sequel: store values as blobs
* Adapters::ActiveRecord fixed and improved

0.7.13

* Adapters::ActiveRecord: Use connection_pool
* Adapters::File: Race condition in #increment fixed

0.7.12

* Concurrency tests added
* Bugfixes for File, Sqlite, Sequel and Datamapper, ActiveRecord

0.7.11

* Logger: Add option :file
* Adapters::TokyoTyrant supports both native (ruby-tokyotyrant) and pure-ruby tokyotyrant gems
* Adapters::Couch use Faraday directly instead of buggy CouchRest
* Adapters::RestClient use Faraday
* Transformer: add quoted printable encoding (:qp)

0.7.10

* Adapters::TokyoTyrant added
* Add attr_reader :backend and option :backend to some adapters
* Cache rename #backend to #adapter

0.7.9

* Adapters::KyotoCabinet added
* Feature detection methods #features and #supports? added
* Validity checks added which check features

0.7.8

* Adapters::Memcached: switched to Dalli by default
* Adapters::Daybreak: add option :sync to load and store
* Adapters::LRUHash: add option :max_count
* Adapters::Mongo: add options :user and :password
* Adapters::Mongo: Correctly close connection
* Adapters::Redis: Correctly close connection
* Transformer: add inspect key transformer
* Added #create method to atomically create entries
* Added WeakCreate and WeakIncrement proxies
* Added Mutex and Semaphore synchronization primitives for
  shared/distributed database locks
* Rename unix socket options from :file to :socket

0.7.6

* Adapters::Daybreak: api changed
* Adapters::File: flock fix for jruby
* Transformer: add to_s key transformer

0.7.5

* OptionsSupport#with: Add support to insert additional proxies
* Builder#adapter: Accepts Moneta store instance now

0.7.4

* Transformer: fix truncate
* Adapters::RestClient: raise error if store fails
* Adapters::TDB added